--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ theme = "alienvibes"
 [params]
 description = "Area 51 Paintball is a rustic outdoor paintball center located North of Kalkaska, Michigan."
 logo = "/images/area-51-logo.webp"
-closed_for_season = true
+closed_for_season = false
 
 
 
